Started working on Floodprotection

--- a/pynitus.conf
+++ b/pynitus.conf
@@ -5,6 +5,8 @@
     "hostAddress": "127.0.0.1",
     "hostPort": 8080,
     "sessionTimeout": 600,
+    "voteSuccessfullPercentage": 0.66,
+    "actionsPerMinute": 3,
     "accessLogfile": "/home/strange/Pynitus_GIT/Pynitus/access.log",
     "errorLogfile": "/home/strange/Pynitus_GIT/Pynitus/error.log",
 
