Fixed type hints and member names in MusicLibrary, PlaybackQueue, Database, FloodProtection, HTMLBuilder, SessionHandler, VoteHandler

--- a/pynitus.conf
+++ b/pynitus.conf
@@ -2,10 +2,10 @@
     "htmlDir": "/home/strange/Pynitus_GIT/Pynitus/html",
     "musicDirectory": "/home/strange/Music",
     "htmlRootPath": "/",
-    "hostAddress": "172.22.162.215",
+    "hostAddress": "localhost",
     "hostPort": 8080,
     "sessionTimeout": 600,
-    "voteSuccessfullPercentage": 0.66,
+    "voteSuccessfulPercentage": 0.66,
     "actionsPerMinute": 3,
     "accessLogfile": "/home/strange/Pynitus_GIT/Pynitus/access.log",
     "errorLogfile": "/home/strange/Pynitus_GIT/Pynitus/error.log",
