--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-__pycache__/*        
 *.log
-.idea/*
+.idea/
 pynitus.conf
+__pycache__/
+src/__pycache__/
+src/config/__pycache__/
+src/data/Track/__pycache__/
+src/data/__pycache__/
+src/data/foundation/__pycache__/
+src/database/__pycache__/
+src/server/__pycache__/
