--- a/pynitus.conf
+++ b/pynitus.conf
@@ -11,10 +11,10 @@
     "errorLogfile": "/home/strange/Pynitus_GIT/Pynitus/error.log",
 
     "users": {
-        "fsinf": "kenwood"
+        "yourUser": "userPassword"
     },
 
     "admins": {
-        "fsadmin": "snugglebutt"
+        "yourAdmin": "adminPassword"
     }
 }
