--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.log
 .idea/
-pynitus.conf
+/pynitus.conf
 __pycache__/
 src/__pycache__/
 src/config/__pycache__/
@@ -9,3 +9,4 @@ src/data/__pycache__/
 src/data/foundation/__pycache__/
 src/database/__pycache__/
 src/server/__pycache__/
+*.pyc
