Add None catching for __addTag

--- a/pynitus.conf
+++ b/pynitus.conf
@@ -1,6 +1,7 @@
 {
     "htmlDir": "/home/strange/Pynitus_GIT/Pynitus/html",
-    "musicDirectory": "/home/strange/Music",
+    "musicDirectory": "/home/vivian/Entwicklung/Music",
+    "db_path": "/home/vivian/db1.test",
     "htmlRootPath": "/",
     "hostAddress": "localhost",
     "hostPort": 8080,
