--- a/pynitus.conf
+++ b/pynitus.conf
@@ -1,7 +1,7 @@
 {
-    "htmlDir": "/home/strange/Pynitus_GIT/Pynitus/html",
-    "musicDirectory": "/home/vivian/Entwicklung/Music",
-    "db_path": "/home/vivian/db1.test",
+    "html_dir": "/home/strange/Pynitus_GIT/Pynitus/html",
+    "musicDirectory": "/home/strange/Music",
+    "db_path": "/home/strange/db1.test",
     "htmlRootPath": "/",
     "hostAddress": "localhost",
     "hostPort": 8080,
