Fixed a bug in unimported/edit where the last track was remembered forever if the site was left

--- a/pynitus.conf
+++ b/pynitus.conf
@@ -1,7 +1,7 @@
 {
     "html_dir": "/home/strange/Pynitus_GIT/Pynitus/html",
     "musicDirectory": "/home/strange/Music",
-    "db_path": "/home/strange/db1.test",
+    "db_path": "/home/strange/Pynitus_GIT/Pynitus/pynitus.db",
     "htmlRootPath": "/",
     "hostAddress": "localhost",
     "hostPort": 8080,
